--- a/.github/workflows/create-feature-branches.yml
+++ b/.github/workflows/create-feature-branches.yml
@@ -19,7 +19,7 @@ jobs:
       tag: ${{ steps.check.outputs.tag }}
       branch_name: ${{ steps.check.outputs.branch_name }}
     steps:
-      - name: Check if tag is pre-release
+      - name: Check if tag should be processed
         id: check
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
@@ -28,13 +28,23 @@ jobs:
             TAG="${GITHUB_REF#refs/tags/}"
           fi
           
-          # Check if this is a release candidate or pre-release tag
-          # Skip tags with .rc, -rc, rc (no separator), .alpha, -beta, etc.
+          # Check if this is a pre-release tag
           if [[ "$TAG" =~ [\.-]?(rc|alpha|beta|pre|dev)[0-9]*$ ]]; then
-            echo "::notice::Skipping pre-release tag: $TAG"
-            echo "is_prerelease=true" >> $GITHUB_OUTPUT
-            echo "tag=$TAG" >> $GITHUB_OUTPUT
-            echo "branch_name=" >> $GITHUB_OUTPUT
+            # Extract base version (e.g., v0.10.0 from v0.10.0rc1)
+            BASE_VERSION=$(echo "$TAG" | sed -E 's/[\.-]?(rc|alpha|beta|pre|dev)[0-9]*$//')
+
+            # Check if corresponding full release exists
+            if git ls-remote --tags https://${{ secrets.ORG_ADMIN_TOKEN || secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git | grep -q "refs/tags/$BASE_VERSION$"; then
+              echo "::notice::Skipping pre-release tag $TAG because full release $BASE_VERSION exists"
+              echo "is_prerelease=true" >> $GITHUB_OUTPUT
+              echo "tag=$TAG" >> $GITHUB_OUTPUT
+              echo "branch_name=" >> $GITHUB_OUTPUT
+            else
+              echo "::notice::Processing pre-release tag $TAG (no full release $BASE_VERSION found)"
+              echo "is_prerelease=false" >> $GITHUB_OUTPUT
+              echo "tag=$TAG" >> $GITHUB_OUTPUT
+              echo "branch_name=features-based-on-$TAG" >> $GITHUB_OUTPUT
+            fi
           else
             echo "::notice::Processing stable release tag: $TAG"
             echo "is_prerelease=false" >> $GITHUB_OUTPUT
@@ -86,12 +96,20 @@ jobs:
           
           for tag in $ALL_TAGS; do
             if [[ "$FOUND_CURRENT" == "true" ]]; then
-              # Skip pre-release tags (same pattern as above)
+              # Check if this is a pre-release tag
               if [[ "$tag" =~ [\.-]?(rc|alpha|beta|pre|dev)[0-9]*$ ]]; then
-                echo "Skipping pre-release tag: $tag"
-                continue
+                # Extract base version (e.g., v0.10.0 from v0.10.0rc1)
+                BASE_VERSION=$(echo "$tag" | sed -E 's/[\.-]?(rc|alpha|beta|pre|dev)[0-9]*$//')
+
+                # Check if corresponding full release exists
+                if git ls-remote --tags origin | grep -q "refs/tags/$BASE_VERSION$"; then
+                  echo "Skipping pre-release tag $tag because full release $BASE_VERSION exists"
+                  continue
+                else
+                  echo "Considering pre-release tag $tag (no full release $BASE_VERSION found)"
+                fi
               fi
-              
+
               # This is a previous tag, check if it has a feature branch
               CANDIDATE_BRANCH="features-based-on-$tag"
               echo "Checking if branch exists for tag $tag: $CANDIDATE_BRANCH"
@@ -318,7 +336,7 @@ jobs:
             \`\`\`
 
           🎯 **No force push needed!**"
-          
+
           gh pr create \
             --title "Cherry-pick conflicts: $PREVIOUS_BRANCH_NAME → $BRANCH_NAME" \
             --body "$PR_BODY" \
